--- a/Final/limpia_excel.ipynb
+++ b/Final/limpia_excel.ipynb
@@ -2,17 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 1,
    "id": "c85dab7a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n"
+    "import pandas as pd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 2,
    "id": "9483e7e4",
    "metadata": {},
    "outputs": [],
@@ -24,6 +24,28 @@
     "otros_diagnosticos = pd.read_excel('data/pacientes.xlsx', sheet_name=3)\n",
     "factores_riesgo = pd.read_excel('data/pacientes.xlsx', sheet_name=4)\n",
     "habitos = pd.read_excel('data/pacientes.xlsx', sheet_name=5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "20d9125c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Paciente    0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "antitrombotico.isna().sum()[antitrombotico.isna().sum() == 0]"
    ]
   },
   {
@@ -209,8 +231,8 @@
     "5. Miocardiopatía\n",
     "6. Enfermedad vascular periférica\n",
     "7. Valvulopatía\n",
-    "8. Enfermedad aórtica y carótidea (categorizar!!)\n",
-    "   - Cirugía"
+    "8. Enfermedad aórtica \n",
+    "9. Enfermedad carótidea"
    ]
   },
   {
@@ -630,7 +652,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": null,
    "id": "54f0ac53",
    "metadata": {},
    "outputs": [],
@@ -660,9 +682,9 @@
     "        res = x['Plan terapeutico del anticoagulante'] \n",
     "    else:\n",
     "        if x['Numero de meses'] == 1:\n",
-    "            res = str(x['Numero de meses'])+'_MONTH'\n",
+    "            res = str(int(x['Numero de meses']))+'_MONTH'\n",
     "        else:\n",
-    "            res = str(x['Numero de meses'])+'_MONTHS'\n",
+    "            res = str(int(x['Numero de meses']))+'_MONTHS'\n",
     "    return res\n",
     "antitrombotico_limpio['Plan terapeutico del anticoagulante'] = antitrombotico.apply(limpiar_terapeutico, axis=1)\n",
     "\n",
@@ -845,7 +867,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "python3.12",
    "language": "python",
    "name": "python3"
   },
@@ -859,7 +881,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.9"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
