--- a/Final/limpia_excel.ipynb
+++ b/Final/limpia_excel.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 2,
    "id": "c85dab7a",
    "metadata": {},
    "outputs": [],
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 3,
    "id": "9483e7e4",
    "metadata": {},
    "outputs": [],
@@ -36,7 +36,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 4,
+   "id": "642cd0bd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['Paciente',\n",
+       "       'Se ha aplicado alguna guía clínica para la definición del tratamiento antitrombótico?',\n",
+       "       'Se le ha prescrito anticoagulante?',\n",
+       "       'Plan terapeutico del anticoagulante', 'Numero de meses',\n",
+       "       'Tipo de anticoagulante', 'Otro tipo', 'Tipo de ACOD',\n",
+       "       'Otro tipo de ACOD', 'Tipo de AVK', 'Otro tipo de AVK', 'Motivo',\n",
+       "       'Otro motivo', 'Se le ha prescrito algún antiagregante?',\n",
+       "       'Numero de antiagregantes', 'Plan terapeutico antiagregante 1',\n",
+       "       'Numero de meses.1', 'Antiagregante 1', 'Otro antiagregante 1',\n",
+       "       'Plan terapeutico antiagregante 2', 'Numero de meses.2',\n",
+       "       'Antiagregante 2', 'Otro antiagregante 2'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "antitrombotico.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "id": "20d9125c",
    "metadata": {},
    "outputs": [
@@ -2437,7 +2469,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.2"
+   "version": "3.12.10"
   }
  },
  "nbformat": 4,
